--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,24 @@ DEBUG=true
 
 # CORS Configuration (optional)
 # CORS_ORIGIN=http://localhost:3000
+
+# ============================================
+# Price Signer Configuration (CRITICAL!)
+# ============================================
+# This wallet signs price data for trading
+# Must match the Price Signer registered in MarketExecutor contract
+# NO GAS NEEDED - signing is off-chain only!
+
+PRICE_SIGNER_PRIVATE_KEY=0xYOUR_PRICE_SIGNER_PRIVATE_KEY_HERE
+PRICE_SIGNER_ADDRESS=0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
+
+# ============================================
+# Smart Contract Addresses (Base Sepolia)
+# ============================================
+CHAIN_ID=84532
+RPC_URL=https://sepolia.base.org
+
+MARKET_EXECUTOR_ADDRESS=0x6D91332E27a5BddCe9486ad4e9cA3C319947a302
+POSITION_MANAGER_ADDRESS=0x8eA6059Bd95a9f0A47Ce361130ffB007415519aF
+TREASURY_MANAGER_ADDRESS=0xe2BF339Beb501f0C5263170189b6960AC416F1f3
+MOCK_USDC_ADDRESS=0x9d660c5d4BFE4b7fcC76f327b22ABF7773DD48c1
