--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.0",
     "express": "^4.21.2",
     "ws": "^8.18.0",
     "ts-node": "^10.9.2",
