--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,11 @@ MARKET_EXECUTOR_ADDRESS=0x6D91332E27a5BddCe9486ad4e9cA3C319947a302
 POSITION_MANAGER_ADDRESS=0x8eA6059Bd95a9f0A47Ce361130ffB007415519aF
 TREASURY_MANAGER_ADDRESS=0xe2BF339Beb501f0C5263170189b6960AC416F1f3
 MOCK_USDC_ADDRESS=0x9d660c5d4BFE4b7fcC76f327b22ABF7773DD48c1
+USDC_PAYMASTER_ADDRESS=0x94FbB9C6C854599c7562c282eADa4889115CCd8E
+
+# ============================================
+# Relay Configuration (for gasless transactions)
+# ============================================
+# This wallet pays gas fees and is reimbursed in USDC
+# NEEDS Base Sepolia ETH for gas!
+RELAY_PRIVATE_KEY=0xYOUR_RELAY_WALLET_PRIVATE_KEY_HERE
