--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.0",
     "express": "^4.21.2",
-    "ws": "^8.18.0",
+    "node-fetch": "^3.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
