--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^3.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
+    "viem": "^2.38.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
