--- a/.env.example
+++ b/.env.example
@@ -1,49 +1,31 @@
-# Server Configuration
 PORT=3001
 NODE_ENV=development
 
-# Debug Mode
 DEBUG=true
 
-# Pyth Network Configuration
-# PYTH_HERMES_URL=https://hermes.pyth.network (default, no need to set)
+PRICE_SIGNER_PRIVATE_KEY=
+RELAY_PRIVATE_KEY=
 
-# CORS Configuration (optional)
-# CORS_ORIGIN=http://localhost:3000
+USDC_TOKEN_ADDRESS=
+TETHRA_TOKEN_ADDRESS=
 
-# ============================================
-# Price Signer Configuration (CRITICAL!)
-# ============================================
-# This wallet signs price data for trading
-# Must match the Price Signer registered in MarketExecutor contract
-# NO GAS NEEDED - signing is off-chain only!
+MARKET_EXECUTOR_ADDRESS=
+POSITION_MANAGER_ADDRESS=
+RISK_MANAGER_ADDRESS=
+TREASURY_MANAGER_ADDRESS=
+LIMIT_EXECUTOR_ADDRESS=
+TAP_TO_TRADE_EXECUTOR_ADDRESS=
+ONE_TAP_PROFIT_ADDRESS=
 
-PRICE_SIGNER_PRIVATE_KEY=0xYOUR_PRICE_SIGNER_PRIVATE_KEY_HERE
-PRICE_SIGNER_ADDRESS=0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
+TETHRA_STAKING_ADDRESS=
+LIQUIDITY_MINING_ADDRESS=
 
-# ============================================
-# Smart Contract Addresses (Base Sepolia)
-# ============================================
+USDC_PAYMASTER_ADDRESS=
+
+DEPLOYER_ADDRESS=
+TREASURY_ADDRESS=
+PRICE_SIGNER_ADDRESS=
+
 CHAIN_ID=84532
+NETWORK_NAME=base-sepolia
 RPC_URL=https://sepolia.base.org
-
-MARKET_EXECUTOR_ADDRESS=0x6D91332E27a5BddCe9486ad4e9cA3C319947a302
-POSITION_MANAGER_ADDRESS=0x8eA6059Bd95a9f0A47Ce361130ffB007415519aF
-TREASURY_MANAGER_ADDRESS=0xe2BF339Beb501f0C5263170189b6960AC416F1f3
-MOCK_USDC_ADDRESS=0x9d660c5d4BFE4b7fcC76f327b22ABF7773DD48c1
-USDC_PAYMASTER_ADDRESS=0x94FbB9C6C854599c7562c282eADa4889115CCd8E
-LIMIT_EXECUTOR_ADDRESS=0x32273224841D32B20cA547e369D1A5905eBfec8b
-
-# ============================================
-# Relay Configuration (for gasless transactions)
-# ============================================
-# This wallet pays gas fees and is reimbursed in USDC
-# NEEDS Base Sepolia ETH for gas!
-RELAY_PRIVATE_KEY=0xYOUR_RELAY_WALLET_PRIVATE_KEY_HERE
-
-# ============================================
-# Limit Order Keeper Configuration
-# ============================================
-# Keeper wallet that holds KEEPER_ROLE on LimitExecutorV2
-# Must have Base Sepolia ETH for gas
-LIMIT_ORDER_KEEPER_PRIVATE_KEY=0xYOUR_LIMIT_ORDER_KEEPER_PRIVATE_KEY_HERE
