feat: implement Stability Fund streamer for periodic vault transfers

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ TETHRA_TOKEN_ADDRESS=0xe5A50E831695f4e438fFe877F4970f14778DeB28
 VAULT_POOL_ADDRESS=0xA880d810Ab6fAc4c60A2b4B8D829fC37f41e2aF9
 STABILITY_FUND_ADDRESS=0x1A7763D20C262Faa477C376BFBfE1B712b51D5C8
 
+# Optional: override Stability Fund streamer interval (default 6 hours)
+VAULT_STREAM_INTERVAL_MINUTES=360
+
 MARKET_EXECUTOR_ADDRESS=0x169BD27456DEF7AF81Cee3F188e4C316aF7c3fE5
 POSITION_MANAGER_ADDRESS=0x45e985eE1d038d942536270c8662eb5cBFeCa6ef
 RISK_MANAGER_ADDRESS=0xB07eFBDd2c31cD97583C91679c9b7B244Db22F0D
