--- a/.env.example
+++ b/.env.example
@@ -6,30 +6,30 @@ DEBUG=true
 PRICE_SIGNER_PRIVATE_KEY=
 RELAY_PRIVATE_KEY=
 
-USDC_TOKEN_ADDRESS=0x97e79F7189144F2A67d56ef9164B8230784014cD
-TETHRA_TOKEN_ADDRESS=0xe5A50E831695f4e438fFe877F4970f14778DeB28
-VAULT_POOL_ADDRESS=0xA880d810Ab6fAc4c60A2b4B8D829fC37f41e2aF9
-STABILITY_FUND_ADDRESS=0x1A7763D20C262Faa477C376BFBfE1B712b51D5C8
+USDC_TOKEN_ADDRESS=
+TETHRA_TOKEN_ADDRESS=
+VAULT_POOL_ADDRESS=
+STABILITY_FUND_ADDRESS=
 
 # Optional: override Stability Fund streamer interval (default 6 hours)
 VAULT_STREAM_INTERVAL_MINUTES=360
 
-MARKET_EXECUTOR_ADDRESS=0x169BD27456DEF7AF81Cee3F188e4C316aF7c3fE5
-POSITION_MANAGER_ADDRESS=0x45e985eE1d038d942536270c8662eb5cBFeCa6ef
-RISK_MANAGER_ADDRESS=0xB07eFBDd2c31cD97583C91679c9b7B244Db22F0D
-LIMIT_EXECUTOR_ADDRESS=0x7690eBE5D0AF8eeBFdF7F18d0De2d4f568a1bf47
-TAP_TO_TRADE_EXECUTOR_ADDRESS=0xb7983AF018547Ef34Af65869cdB2E47264630532
-ONE_TAP_PROFIT_ADDRESS=0x9746D0486caE8828569AAE991B6A924dDBc5c79f
+MARKET_EXECUTOR_ADDRESS=
+POSITION_MANAGER_ADDRESS=
+RISK_MANAGER_ADDRESS=
+LIMIT_EXECUTOR_ADDRESS=
+TAP_TO_TRADE_EXECUTOR_ADDRESS=
+ONE_TAP_PROFIT_ADDRESS=
 
-TETHRA_STAKING_ADDRESS=0x583578f24DCC3f43eefa91bE1a530CBB06faf189
+TETHRA_STAKING_ADDRESS=
 
-USDC_PAYMASTER_ADDRESS=0x8b4AC6b2Dbb9fC97c62C0c086f2932c143DCCc91
+USDC_PAYMASTER_ADDRESS=
 
-DEPLOYER_ADDRESS=0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
-PRICE_SIGNER_ADDRESS=0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
-KEEPER_ADDRESS=0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
-TEAM_ADDRESS=0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
-PROTOCOL_TREASURY_ADDRESS=0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
+DEPLOYER_ADDRESS=
+PRICE_SIGNER_ADDRESS=
+KEEPER_ADDRESS=
+TEAM_ADDRESS=
+PROTOCOL_TREASURY_ADDRESS=
 
 CHAIN_ID=84532
 NETWORK_NAME=base-sepolia
