feat: Switch backend oracle to Chainlink + add RWA/forex/index pairs

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ NODE_ENV=development
 
 DEBUG=true
 
+# Oracle provider: "chainlink" (default) or "pyth"
+ORACLE_PROVIDER=chainlink
+
 PRICE_SIGNER_PRIVATE_KEY=
 RELAY_PRIVATE_KEY=
 
@@ -34,3 +37,27 @@ PROTOCOL_TREASURY_ADDRESS=
 CHAIN_ID=84532
 NETWORK_NAME=base-sepolia
 RPC_URL=https://sepolia.base.org
+
+# Chainlink price feed configuration
+# Optional: use a different RPC for Chainlink reads than trading/contract RPC.
+# Useful if contracts are on Base Sepolia but you want to read Base mainnet feeds.
+# CHAINLINK_RPC_URL=https://mainnet.base.org
+#
+# Option A: Provide each feed individually (recommended)
+# CHAINLINK_FEED_BTC=0x...
+# CHAINLINK_FEED_ETH=0x...
+# CHAINLINK_FEED_XAUUSD=0x...
+# CHAINLINK_FEED_USOIL=0x...
+# CHAINLINK_FEED_EURUSD=0x...
+# CHAINLINK_FEED_GBPUSD=0x...
+# CHAINLINK_FEED_US30=0x...
+# CHAINLINK_FEED_NASDAQ=0x...
+#
+# Option B: Provide all feeds as a JSON object (SYMBOL -> address)
+# CHAINLINK_FEEDS={"BTC":"0x...","ETH":"0x...","XAUUSD":"0x..."}
+#
+# Polling settings
+CHAINLINK_POLL_INTERVAL_MS=1200
+# NOTE: Chainlink feeds may only update on heartbeat (minutes/hours) or deviation thresholds.
+# Use a higher max age than Pyth/WebSocket feeds.
+CHAINLINK_MAX_PRICE_AGE_SEC=90
